# OpenWA

./: .gitignore  CLAUDE.md  README.md  deploy-debug.ps1  deploy.ps1  replay-test.ps1  run-tests.ps1  start-debug.ps1  start-frontend.ps1  start.ps1  trace-desync.ps1
crates/openwa-core/: CLAUDE.md  Cargo.toml
crates/openwa-core/src/: active_sound.rs  address.rs  bitgrid.rs  cp1252.rs  dd_display_base.rs  dddisplay.rs  ddgame.rs  ddgame_wrapper.rs  ddkeyboard.rs  ddnetgame_wrapper.rs  dir.rs  display_base.rs  display_gfx.rs  dssound.rs  field_format.rs  fixed.rs  frontend.rs  game_info.rs  game_session.rs  game_stats.rs  img.rs  input_ctrl.rs  lib.rs  log.rs  lzss_decode.rs  macros.rs  mem.rs  opengl.rs  pal.rs  palette.rs  pixel_grid.rs  rebase.rs  registry.rs  rng.rs  scheme.rs  snapshot.rs  speech.rs  sprite_lzss.rs  task.rs  trig.rs  (+7 more)
crates/openwa-core/src/asset/: gfx_dir.rs  img.rs  mod.rs
crates/openwa-core/src/audio/: active_sound.rs  dssound.rs  mod.rs  music.rs  sound.rs  sound_id.rs  sound_ops.rs  sound_queue.rs  speech_ops.rs  streaming.rs  wav_player.rs
crates/openwa-core/src/bitgrid/: blit.rs  mod.rs
crates/openwa-core/src/display/: base.rs  bitgrid.rs  compat_renderer.rs  dd_display.rs  display_vtable.rs  display_wrapper.rs  gfx.rs  gradient.rs  line_draw.rs  mod.rs  opengl.rs  palette.rs  sprite_blit.rs
crates/openwa-core/src/engine/: coord.rs  ddgame.rs  ddgame_constructor.rs  ddgame_load_fonts.rs  ddgame_wrapper.rs  dispatch_frame.rs  game_info.rs  game_session.rs  game_state_init.rs  map_class.rs  mod.rs  net_bridge.rs  net_wrapper.rs  process_frame.rs  replay.rs  team_arena.rs  team_ops.rs
crates/openwa-core/src/frontend/: map_view.rs
crates/openwa-core/src/game/: frontend.rs  mod.rs  scheme.rs  weapon.rs  weapon_fire.rs  weapon_release.rs
crates/openwa-core/src/input/: controller.rs  keyboard.rs  mod.rs
crates/openwa-core/src/render/: bungee_trail.rs  crosshair_line.rs  gfx_dir.rs  gfx_handler.rs  landscape.rs  message.rs  mod.rs  palette.rs  queue.rs  queue_dispatch.rs  spr.rs  sprite.rs  turn_order.rs
crates/openwa-core/src/sprite/: mod.rs  spr.rs  sprite_blit.rs  types.rs
crates/openwa-core/src/task/: arrow.rs  base.rs  bit_grid.rs  cloud.rs  filter.rs  fire.rs  game_task.rs  mine_oil_drum.rs  missile.rs  mod.rs  overlays.rs  state_machine.rs  supply_crate.rs  team.rs  team_message.rs  turn_game.rs  worm.rs
crates/openwa-core/src/wa/: ddgame.rs  frontend.rs  mfc.rs  resource.rs
crates/openwa-core/tests/: scheme_parse.rs  wgt_parse.rs
crates/openwa-debugui/: Cargo.toml
crates/openwa-debugui/src/: app.rs  lib.rs  log.rs
crates/openwa-dll/: CLAUDE.md  Cargo.toml  build.rs
crates/openwa-dll/hooks/: entity.toml  entity_message.toml  explosion.toml  frontend.toml  game_session.toml  gfx_dir.toml  keyboard.toml  main_loop.toml  mouse.toml  music.toml  render.toml  scheme.toml  sound.toml  speech.toml  sprite.toml  team.toml  weapon.toml  world_init.toml
crates/openwa-dll/src/: debug_server.rs  debug_sync.rs  debug_watchpoint.rs  hook.rs  lib.rs  match_launcher.rs  snapshot.rs  startup_checks.rs
crates/openwa-dll/src/replacements/: bitgrid.rs  config.rs  create_explosion.rs  ddgame_init.rs  debug_utils.rs  dispatch_trace.rs  display.rs  file_isolation.rs  fire_effect.rs  frame_hook.rs  frontend.rs  game_entity_message.rs  game_session.rs  game_state_hooks.rs  game_task_message.rs  gfx_dir.rs  hardware_init.rs  headless.rs  init_session.rs  keyboard.rs  main_loop.rs  mod.rs  music.rs  process_frame.rs  render.rs  replay.rs  replay_test.rs  scheme.rs  sound.rs  speech.rs  sprite.rs  steam.rs  string_resource.rs  team.rs  trace_desync.rs  weapon.rs  weapon_release.rs  world_init.rs
crates/openwa-frontend/: Cargo.toml
crates/openwa-frontend/src/: app.rs  launch.rs  lib.rs
crates/openwa-game/: CLAUDE.md  Cargo.toml  build.rs
crates/openwa-game/data/: string_resources.txt
crates/openwa-game/src/: address.rs  field_format.rs  fixed.rs  lib.rs  macros.rs  main_thread.rs  mem.rs  registry.rs  rng.rs  seh.rs  snapshot.rs  trig.rs  vtable.rs  wa_alloc.rs  wa_call.rs
crates/openwa-game/src/asset/: gfx_dir.rs  img.rs
crates/openwa-game/src/audio/: active_sound.rs  dssound.rs  known_sound_id.rs  mod.rs  music.rs  sound_id.rs  sound_ops.rs  sound_queue.rs  speech.rs  speech_ops.rs  wav_player.rs
crates/openwa-game/src/bitgrid/: bitmap.rs  blit.rs  mod.rs
crates/openwa-game/src/engine/: buffer_object.rs  clock.rs  config_load.rs  coord.rs  ddgame.rs  ddgame_constructor.rs  ddgame_load_fonts.rs  ddgame_wrapper.rs  dispatch_frame.rs  dual_buffer_object.rs  entity_activity_queue.rs  fire_effect.rs  fixed_slew.rs  game_info.rs  game_info_snapshot.rs  game_session.rs  game_session_run.rs  game_state.rs  game_state_init.rs  game_state_stream.rs  game_timer.rs  hardware_init.rs  init_session.rs  interp_history.rs  launch_source.rs  log_sink.rs  menu_panel.rs  mod.rs  net_bridge.rs  net_session.rs  net_wrapper.rs  pending_match.rs  process_frame.rs  pump_messages.rs  replay.rs  (+13 more)
crates/openwa-game/tests/: codegen_drift.rs  scheme_parse.rs
crates/openwa-harness/: Cargo.toml
crates/openwa-harness/src/: lib.rs
crates/openwa-launcher/: Cargo.toml
crates/openwa-launcher/src/: inject.rs  main.rs
crates/openwa-lib/: Cargo.toml
crates/openwa-lib/src/: lib.rs  rebase.rs
crates/openwa-re-codegen/: Cargo.toml
crates/openwa-re-codegen/src/: emit_addresses.rs  emit_trampolines.rs  emit_wa_calls.rs  hook_map.rs  lib.rs  storage.rs  type_resolver.rs
crates/openwa-re-data/: Cargo.toml
crates/openwa-re-data/src/: apply.rs  diff.rs  emit.rs  extras.rs  filter.rs  lib.rs  manifest.rs  model.rs  repo.rs  resolve.rs  setup.rs  toml_io.rs  validate.rs  xml_in.rs  xml_out.rs
crates/openwa-test-runner/: CLAUDE.md  Cargo.toml
crates/openwa-test-runner/src/: main.rs
crates/openwa-validator/: Cargo.toml
crates/openwa-validator/src/: lib.rs
crates/openwa-wormkit/: CLAUDE.md  Cargo.toml
crates/openwa-wormkit/src/: debug_server.rs  debug_sync.rs  debug_ui.rs  debug_watchpoint.rs  hook.rs  lib.rs  rebase.rs  snapshot.rs  wa_call.rs
(+1388 files in other folders)
