[package]
name = "openwa-core"
version = "0.1.0"
edition = "2024"
description = "Cross-platform fundamentals for Worms Armageddon reverse engineering — idiomatic Rust types, pure math, and file-format parsers. No WA.exe memory layouts, no Ghidra addresses, no Windows APIs."

[dependencies]
bitflags = "2.11.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
byteorder = "1.5"
deku = { version = "0.20.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
openwa-config = { path = "../openwa-config" }
