[package]
name = "openwa-frontend"
version = "0.1.0"
edition = "2024"
description = "Custom egui-based match launcher for OpenWA (prototype frontend)"

[dependencies]
openwa-core = { path = "../openwa-core" }
openwa-config = { path = "../openwa-config" }
openwa-game = { path = "../openwa-game" }
eframe = { version = "0.34.1", default-features = false, features = [
    "glow",
    "default_fonts",
] }
winit = "0.30"
rand = "0.8"
