[package]
name = "openwa-game"
version = "0.1.0"
edition = "2024"
description = "WA.exe-specific code for Worms Armageddon reverse engineering — types, addresses, ASLR rebasing, typed WA function wrappers, and game logic"
build = "build.rs"

[dependencies]
openwa-core = { path = "../openwa-core" }
bitflags = "2"
heapless = "0.9"
hound = "3"
inventory = "0.3.24"
openwa-derive = { path = "../openwa-derive" }
openwa-debug-proto = { path = "../openwa-debug-proto" }
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
derive_more = { version = "2.1.1", features = ["try_from"] }

[dev-dependencies]
gif = "0.14"
image = { version = "0.25", default-features = false, features = [
    "gif",
    "png",
] }
openwa-config = { path = "../openwa-config" }

[target.'cfg(target_os = "windows")'.dependencies]
softbuffer = "0.4"
raw-window-handle = "0.6"
windows = { version = "0.62", features = ["Win32_Media_Audio_DirectSound"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
] }
