[package]
name = "openwa-harness"
version = "0.1.0"
edition = "2021"
description = "Offline test harness — loads WA.exe into process memory for validation"

[dependencies]
openwa-core = { path = "../openwa-core" }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Memory"] }
