[package]
name = "openwa-launcher"
version = "0.1.0"
edition = "2024"
description = "Launcher that injects openwa.dll into WA.exe before its main thread runs"

[[bin]]
name = "openwa-launcher"
path = "src/main.rs"

[dependencies]
openwa-config = { path = "../openwa-config" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
