[package]
name = "openwa-lib"
version = "0.1.0"
edition = "2021"
description = "Shared library for calling WA.exe functions with typed wrappers"

[dependencies]
openwa-types = { path = "../openwa-types" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
] }
