[package]
name = "openwa-test-runner"
version = "0.1.0"
edition = "2024"
description = "Headless replay test runner with concurrent execution"

[[bin]]
name = "openwa-test"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
openwa-config = { path = "../openwa-config" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
