[package]
name = "openwa-validator"
version = "0.1.0"
edition = "2021"
description = "WormKit DLL that validates openwa-types against live WA.exe memory"

[lib]
crate-type = ["cdylib"]

[dependencies]
openwa-types = { path = "../openwa-types" }
retour = { version = "0.4.0-alpha.4", features = ["static-detour", "thiscall-abi"] }
