[package]
name = "openwa-validator"
version = "0.1.0"
edition = "2021"
description = "WormKit DLL that validates openwa-types against live WA.exe memory"

[lib]
crate-type = ["cdylib"]

[dependencies]
openwa-types = { path = "../openwa-types" }
minhook = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
