[package]
name = "openwa-wormkit"
version = "0.1.0"
edition = "2021"
description = "WormKit DLL that replaces WA.exe functions with Rust reimplementations"

[lib]
crate-type = ["cdylib"]

[features]
debug-ui = ["dep:openwa-debugui"]

[dependencies]
openwa-core = { path = "../openwa-core" }
openwa-debug-proto = { path = "../openwa-debug-proto" }
openwa-debugui = { path = "../openwa-debugui", optional = true }
heapless = "0.9"
hound = "3"
minhook = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Media_Audio_DirectSound",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
